# yandex-wordstat-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README_RU.md
examples/: regions_tree_example.json
tests/: conftest.py  helpers.py  test_api_settings.py  test_ci_workflow.py  test_dockerfile.py  test_entrypoints.py  test_live_smoke.py  test_mcp_tools.py  test_models.py  test_tools_helpers.py  test_typing_config.py  test_wordstat_client.py
wordstat_mcp/: __init__.py  __main__.py  api_settings.py  client.py  descriptions.py  exceptions.py  healthcheck.py  helpers.py  metadata.py  models.py  operators.py  server.py  tools.py
wordstat_mcp/resources/: WORDSTAT_OPERATORS_AGENT_GUIDE_RU.md  __init__.py
