[project]
name = "yandex-wordstat-mcp"
version = "0.1.0"
description = "MCP server for Yandex Wordstat API v2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "dateparser>=1.4.0",
    "fastmcp>=3.2.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
mcp-yandex-wordstat = "wordstat_mcp.__main__:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wordstat_mcp"]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "coverage[toml]>=7.10.0",
    "deptry>=0.25.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
xfail_strict = true
markers = [
    "unit: fast isolated tests for local logic",
    "integration: tests that require external services or real credentials",
]
